--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "main": "./lib/app.js",
   "scripts": {
     "start": "node ./lib/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon app.ts"
   },
   "repository": {
     "type": "git",
@@ -24,6 +24,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
 }
